# CppND-Capstone-Icarus

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build_env.sh  setup.sh
src/: image_preprocessor.cpp  image_preprocessor.h  image_provider.cpp  image_provider.h  main.cpp  model_handler.cpp  model_handler.h  runtime.cpp  runtime.h
